--- a/app/src/main/res/layout/activity_buiness_travel_reimb_address_time.xml
+++ b/app/src/main/res/layout/activity_buiness_travel_reimb_address_time.xml
@@ -12,6 +12,15 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/tip_serial_number_info_txt"
+            android:textSize="@dimen/custom_reimb_serial_number_tip_text_size"
+            android:textColor="@color/color_black_content"
+            android:text="@string/serial_number_txt"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/title_business_travel_reimb_address_begin_txt"
             android:textSize="@dimen/custom_apply_title_text_size"
             android:textColor="@color/color_black_title"
@@ -23,6 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/content_business_travel_reimb_address_begin_edit"
+            android:layout_below="@id/tip_serial_number_info_txt"
             android:layout_toRightOf="@id/title_business_travel_reimb_address_begin_txt"
             android:layout_marginLeft="@dimen/apply_title_content_margin"
             android:layout_marginTop="@dimen/custom_apply_item_margin"
