--- a/app/src/main/res/layout/activity_businees_travel_reimb_fee_info.xml
+++ b/app/src/main/res/layout/activity_businees_travel_reimb_fee_info.xml
@@ -2,10 +2,27 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data></data>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/business_travel_reimb_fee_info_list"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/custom_activity_padding"
-        ></android.support.v7.widget.RecyclerView>
+        android:orientation="vertical"
+        android:padding="@dimen/custom_activity_padding">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_black_content"
+            android:textSize="@dimen/custom_reimb_serial_number_tip_text_size"
+            android:text="@string/serial_number_txt"
+            android:layout_marginBottom="@dimen/custom_apply_item_margin"
+            />
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/business_travel_reimb_fee_info_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            ></android.support.v7.widget.RecyclerView>
+    </LinearLayout>
+
 </layout>
