--- a/app/src/main/res/layout/activity_business_travel_reimb_info.xml
+++ b/app/src/main/res/layout/activity_business_travel_reimb_info.xml
@@ -13,6 +13,15 @@
         >
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tip_serial_number_info_txt"
+            android:textSize="@dimen/custom_reimb_serial_number_tip_text_size"
+            android:textColor="@color/color_black_content"
+            android:text="@string/serial_number_txt"
+            />
+
+        <TextView
             android:id="@+id/title_reimb_project_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,6 +34,7 @@
             android:id="@+id/content_reimb_project_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/tip_serial_number_info_txt"
             android:layout_marginLeft="@dimen/apply_title_content_margin"
             android:layout_marginTop="@dimen/custom_apply_item_margin"
             android:layout_toRightOf="@id/title_reimb_project_txt"
