--- a/app/src/main/res/values/values.xml
+++ b/app/src/main/res/values/values.xml
@@ -38,6 +38,8 @@
     <dimen name="custom_reimb_amount_text_size">18dp</dimen>
     <dimen name="custom_reimb_serial_number_tip_text_size">10dp</dimen>
 
+    <dimen name="reimb_type_item_height">40dp</dimen>
+
     <dimen name="title_tip_txt_padding_vertical">10dp</dimen>
     <dimen name="tip_content_margin">5dp</dimen>
 
@@ -59,4 +61,6 @@
     <dimen name="setting_item_inner_padding">15dp</dimen>
     <dimen name="setting_item_text_size">13dp</dimen>
     <dimen name="setting_item_height_divider">1dp</dimen>
+
+
 </resources>
