会议培训费用布局

--- a/app/src/main/res/layout/activity_buiness_travel_reimb_address_time.xml
+++ b/app/src/main/res/layout/activity_buiness_travel_reimb_address_time.xml
@@ -3,120 +3,127 @@
     <data>
 
     </data>
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/custom_activity_padding"
+        android:orientation="vertical"
         >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tip_serial_number_info_txt"
-            android:textSize="@dimen/custom_reimb_serial_number_tip_text_size"
-            android:textColor="@color/color_black_content"
-            android:text="@string/serial_number_txt"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/title_business_travel_reimb_address_begin_txt"
-            android:textSize="@dimen/custom_apply_title_text_size"
-            android:textColor="@color/color_black_title"
-            android:text="@string/title_business_travel_reimb_address_begin"
-            android:layout_alignBaseline="@id/content_business_travel_reimb_address_begin_edit"
-            />
-
-        <EditText
+        <include layout="@layout/title_bar_layout"/>
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/content_business_travel_reimb_address_begin_edit"
-            android:layout_below="@id/tip_serial_number_info_txt"
-            android:layout_toRightOf="@id/title_business_travel_reimb_address_begin_txt"
-            android:layout_marginLeft="@dimen/apply_title_content_margin"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size"
-            />
+            android:layout_height="match_parent"
+            android:padding="@dimen/custom_activity_padding"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tip_serial_number_info_txt"
+                android:textSize="@dimen/custom_reimb_serial_number_tip_text_size"
+                android:textColor="@color/color_black_content"
+                android:text="@string/serial_number_txt"
+                />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/content_business_travel_reimb_address_end_edit"
-            android:layout_below="@id/content_business_travel_reimb_address_begin_edit"
-            android:layout_alignLeft="@id/content_business_travel_reimb_address_begin_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size"
-            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/title_business_travel_reimb_address_begin_txt"
+                android:textSize="@dimen/custom_apply_title_text_size"
+                android:textColor="@color/color_black_title"
+                android:text="@string/title_business_travel_reimb_address_begin"
+                android:layout_alignBaseline="@id/content_business_travel_reimb_address_begin_edit"
+                />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/content_business_travel_reimb_address_begin_edit"
-            android:layout_alignBaseline="@id/content_business_travel_reimb_address_end_edit"
-            android:textSize="@dimen/custom_apply_title_text_size"
-            android:textColor="@color/color_black_title"
-            android:text="@string/title_business_travel_reimb_address_end"
-            />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/content_business_travel_reimb_address_begin_edit"
+                android:layout_below="@id/tip_serial_number_info_txt"
+                android:layout_toRightOf="@id/title_business_travel_reimb_address_begin_txt"
+                android:layout_marginLeft="@dimen/apply_title_content_margin"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size"
+                />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/content_business_travel_reimb_time_begin_edit"
-            android:layout_below="@id/content_business_travel_reimb_address_end_edit"
-            android:layout_alignLeft="@id/content_business_travel_reimb_address_end_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size"
-            />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/content_business_travel_reimb_address_end_edit"
+                android:layout_below="@id/content_business_travel_reimb_address_begin_edit"
+                android:layout_alignLeft="@id/content_business_travel_reimb_address_begin_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size"
+                />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/content_business_travel_reimb_address_end_edit"
-            android:layout_alignBaseline="@id/content_business_travel_reimb_time_begin_edit"
-            android:textSize="@dimen/custom_apply_title_text_size"
-            android:textColor="@color/color_black_title"
-            android:text="@string/title_business_travel_apply_time_begin"
-            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/content_business_travel_reimb_address_begin_edit"
+                android:layout_alignBaseline="@id/content_business_travel_reimb_address_end_edit"
+                android:textSize="@dimen/custom_apply_title_text_size"
+                android:textColor="@color/color_black_title"
+                android:text="@string/title_business_travel_reimb_address_end"
+                />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/content_business_travel_reimb_time_end_edit"
-            android:layout_below="@id/content_business_travel_reimb_time_begin_edit"
-            android:layout_alignLeft="@id/content_business_travel_reimb_time_begin_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size"
-            />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/content_business_travel_reimb_time_begin_edit"
+                android:layout_below="@id/content_business_travel_reimb_address_end_edit"
+                android:layout_alignLeft="@id/content_business_travel_reimb_address_end_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size"
+                />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/content_business_travel_reimb_time_begin_edit"
-            android:layout_alignBaseline="@id/content_business_travel_reimb_time_end_edit"
-            android:textSize="@dimen/custom_apply_title_text_size"
-            android:textColor="@color/color_black_title"
-            android:text="@string/title_business_travel_apply_time_end"
-            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/content_business_travel_reimb_address_end_edit"
+                android:layout_alignBaseline="@id/content_business_travel_reimb_time_begin_edit"
+                android:textSize="@dimen/custom_apply_title_text_size"
+                android:textColor="@color/color_black_title"
+                android:text="@string/title_business_travel_apply_time_begin"
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/content_business_travel_reimb_time_end_edit"
+                android:layout_below="@id/content_business_travel_reimb_time_begin_edit"
+                android:layout_alignLeft="@id/content_business_travel_reimb_time_begin_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/content_business_travel_reimb_time_begin_edit"
+                android:layout_alignBaseline="@id/content_business_travel_reimb_time_end_edit"
+                android:textSize="@dimen/custom_apply_title_text_size"
+                android:textColor="@color/color_black_title"
+                android:text="@string/title_business_travel_apply_time_end"
+                />
 
 
-        <TextView
-            android:id="@+id/next_btn"
-            android:layout_width="@dimen/custom_apply_next_btn_width"
-            android:layout_height="@dimen/custom_apply_next_btn_height"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/content_business_travel_reimb_time_end_edit"
-            android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
-            android:background="@drawable/bg_next_btn"
-            android:gravity="center"
-            android:text="@string/btn_next"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/custom_apply_title_text_size"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/next_btn"
+                android:layout_width="@dimen/custom_apply_next_btn_width"
+                android:layout_height="@dimen/custom_apply_next_btn_height"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/content_business_travel_reimb_time_end_edit"
+                android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
+                android:background="@drawable/bg_next_btn"
+                android:gravity="center"
+                android:text="@string/btn_next"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/custom_apply_title_text_size"
+                android:textStyle="bold" />
 
-    </RelativeLayout>
+        </RelativeLayout>
+    </LinearLayout>
+
 </layout>
