--- a/app/src/main/res/layout/activity_businees_travel_reimb_fee_info.xml
+++ b/app/src/main/res/layout/activity_businees_travel_reimb_fee_info.xml
@@ -6,7 +6,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/custom_activity_padding">
+        >
+
+        <include layout="@layout/title_bar_layout"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -14,7 +16,9 @@
             android:textColor="@color/color_black_content"
             android:textSize="@dimen/custom_reimb_serial_number_tip_text_size"
             android:text="@string/serial_number_txt"
-            android:layout_marginBottom="@dimen/custom_apply_item_margin"
+            android:layout_marginTop="@dimen/custom_activity_padding"
+            android:layout_marginLeft="@dimen/custom_activity_padding"
+            android:layout_marginBottom="@dimen/tip_content_margin"
             />
 
 
