--- a/app/src/main/res/layout/activity_business_traval_apply_info.xml
+++ b/app/src/main/res/layout/activity_business_traval_apply_info.xml
@@ -5,123 +5,131 @@
 
     </data>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/custom_activity_padding">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/title_depart_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_depart_edit"
-            android:text="@string/title_business_travel_apply_depart"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+        <include layout="@layout/title_bar_layout" />
 
-        <EditText
-            android:id="@+id/content_depart_edit"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/apply_title_content_margin"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:layout_toRightOf="@id/title_depart_txt"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            android:layout_height="match_parent"
+            android:padding="@dimen/custom_activity_padding">
 
-        <EditText
-            android:id="@+id/content_people_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_depart_edit"
-            android:layout_below="@id/content_depart_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <TextView
+                android:id="@+id/title_depart_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_depart_edit"
+                android:text="@string/title_business_travel_apply_depart"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <TextView
-            android:id="@+id/title_apply_people"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_people_edit"
-            android:layout_below="@id/title_depart_txt"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:text="@string/title_business_travel_apply_people"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <EditText
+                android:id="@+id/content_depart_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/apply_title_content_margin"
+                android:layout_toRightOf="@id/title_depart_txt"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <EditText
-            android:id="@+id/content_people_count_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_people_edit"
-            android:layout_below="@id/content_people_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_people_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_depart_edit"
+                android:layout_below="@id/content_depart_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:id="@+id/title_people_count_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_people_count_edit"
-            android:text="@string/title_business_travel_apply_people_count"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:id="@+id/title_apply_people"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_people_edit"
+                android:layout_below="@id/title_depart_txt"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:text="@string/title_business_travel_apply_people"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <EditText
-            android:id="@+id/content_people_charge_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_people_count_edit"
-            android:layout_below="@id/content_people_count_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_people_count_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_people_edit"
+                android:layout_below="@id/content_people_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:id="@+id/title_people_charge_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_people_charge_edit"
-            android:layout_below="@id/content_people_count_edit"
-            android:text="@string/title_business_travel_apply_person_charge"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <TextView
+                android:id="@+id/title_people_count_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_people_count_edit"
+                android:text="@string/title_business_travel_apply_people_count"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <EditText
-            android:id="@+id/content_apply_reason_edit"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/custom_apply_text_area_height"
-            android:layout_alignLeft="@id/content_people_charge_edit"
-            android:layout_below="@id/content_people_charge_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_people_charge_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_people_count_edit"
+                android:layout_below="@id/content_people_count_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:id="@+id/title_apply_reason_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_apply_reason_edit"
-            android:layout_below="@id/content_people_charge_edit"
-            android:text="@string/title_business_travel_apply_reason"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:id="@+id/title_people_charge_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_people_charge_edit"
+                android:layout_below="@id/content_people_count_edit"
+                android:text="@string/title_business_travel_apply_person_charge"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:id="@+id/next_btn"
-            android:layout_width="@dimen/custom_apply_next_btn_width"
-            android:layout_height="@dimen/custom_apply_next_btn_height"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/content_apply_reason_edit"
-            android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
-            android:background="@drawable/bg_next_btn"
-            android:gravity="center"
-            android:text="@string/btn_next"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/custom_apply_title_text_size"
-            android:textStyle="bold" />
-    </RelativeLayout>
+            <EditText
+                android:id="@+id/content_apply_reason_edit"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/custom_apply_text_area_height"
+                android:layout_alignLeft="@id/content_people_charge_edit"
+                android:layout_below="@id/content_people_charge_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
+
+            <TextView
+                android:id="@+id/title_apply_reason_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_apply_reason_edit"
+                android:layout_below="@id/content_people_charge_edit"
+                android:text="@string/title_business_travel_apply_reason"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
+
+            <TextView
+                android:id="@+id/next_btn"
+                android:layout_width="@dimen/custom_apply_next_btn_width"
+                android:layout_height="@dimen/custom_apply_next_btn_height"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/content_apply_reason_edit"
+                android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
+                android:background="@drawable/bg_next_btn"
+                android:gravity="center"
+                android:text="@string/btn_next"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/custom_apply_title_text_size"
+                android:textStyle="bold" />
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </layout>
