--- a/app/src/main/res/layout/activity_business_travel_apply_address_time.xml
+++ b/app/src/main/res/layout/activity_business_travel_apply_address_time.xml
@@ -5,165 +5,171 @@
 
     </data>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/custom_activity_padding"
-        >
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/title_apply_address_start_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_apply_address_start_edit"
-            android:text="@string/title_business_travel_apply_address_start"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+        <include layout="@layout/title_bar_layout" />
 
-        <EditText
-            android:id="@+id/content_apply_address_start_edit"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/apply_title_content_margin"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:layout_toRightOf="@id/title_apply_address_start_txt"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            android:layout_height="match_parent"
+            android:padding="@dimen/custom_activity_padding">
 
-        <EditText
-            android:id="@+id/content_address_way_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_apply_address_start_edit"
-            android:layout_below="@id/content_apply_address_start_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <TextView
+                android:id="@+id/title_apply_address_start_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_apply_address_start_edit"
+                android:text="@string/title_business_travel_apply_address_start"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_address_way_edit"
-            android:layout_below="@id/content_apply_address_start_edit"
-            android:text="@string/title_business_travel_apply_address_way"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <EditText
+                android:id="@+id/content_apply_address_start_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/apply_title_content_margin"
+                android:layout_toRightOf="@id/title_apply_address_start_txt"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <EditText
-            android:id="@+id/content_address_end_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_address_way_edit"
-            android:layout_below="@id/content_address_way_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_address_way_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_apply_address_start_edit"
+                android:layout_below="@id/content_apply_address_start_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:id="@+id/title_apply_address_end_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_address_end_edit"
-            android:layout_below="@id/content_address_way_edit"
-            android:text="@string/title_business_travel_apply_address_end"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_address_way_edit"
+                android:layout_below="@id/content_apply_address_start_edit"
+                android:text="@string/title_business_travel_apply_address_way"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <EditText
-            android:id="@+id/content_vehicle_begin_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_address_end_edit"
-            android:layout_below="@id/content_address_end_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_address_end_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_address_way_edit"
+                android:layout_below="@id/content_address_way_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:id="@+id/title_vehicle_begin_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_vehicle_begin_edit"
-            android:layout_below="@id/content_address_end_edit"
-            android:text="@string/title_business_travel_apply_vehicle_go"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:id="@+id/title_apply_address_end_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_address_end_edit"
+                android:layout_below="@id/content_address_way_edit"
+                android:text="@string/title_business_travel_apply_address_end"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <EditText
-            android:id="@+id/content_vehicle_end_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_vehicle_begin_edit"
-            android:layout_below="@id/content_vehicle_begin_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_vehicle_begin_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_address_end_edit"
+                android:layout_below="@id/content_address_end_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:id="@+id/title_vehicle_end_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_vehicle_end_edit"
-            android:layout_below="@id/content_vehicle_begin_edit"
-            android:text="@string/title_business_travel_apply_vehicle_back"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:id="@+id/title_vehicle_begin_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_vehicle_begin_edit"
+                android:layout_below="@id/content_address_end_edit"
+                android:text="@string/title_business_travel_apply_vehicle_go"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <EditText
-            android:id="@+id/content_apply_time_begin_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_vehicle_end_edit"
-            android:layout_below="@id/content_vehicle_end_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_vehicle_end_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_vehicle_begin_edit"
+                android:layout_below="@id/content_vehicle_begin_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:id="@+id/title_apply_time_begin_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_apply_time_begin_edit"
-            android:layout_below="@id/content_vehicle_end_edit"
-            android:text="@string/title_business_travel_apply_time_begin"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:id="@+id/title_vehicle_end_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_vehicle_end_edit"
+                android:layout_below="@id/content_vehicle_begin_edit"
+                android:text="@string/title_business_travel_apply_vehicle_back"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <EditText
-            android:id="@+id/content_apply_time_end_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_apply_time_begin_edit"
-            android:layout_below="@id/content_apply_time_begin_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_apply_time_begin_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_vehicle_end_edit"
+                android:layout_below="@id/content_vehicle_end_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:id="@+id/title_apply_time_end_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_apply_time_end_edit"
-            android:layout_below="@id/content_apply_time_begin_edit"
-            android:text="@string/title_business_travel_apply_time_end"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:id="@+id/title_apply_time_begin_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_apply_time_begin_edit"
+                android:layout_below="@id/content_vehicle_end_edit"
+                android:text="@string/title_business_travel_apply_time_begin"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <TextView
-            android:id="@+id/next_btn"
-            android:layout_width="@dimen/custom_apply_next_btn_width"
-            android:layout_height="@dimen/custom_apply_next_btn_height"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/content_apply_time_end_edit"
-            android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
-            android:background="@drawable/bg_next_btn"
-            android:gravity="center"
-            android:text="@string/btn_next"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/custom_apply_next_btn_text_size"
-            android:textStyle="bold" />
+            <EditText
+                android:id="@+id/content_apply_time_end_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_apply_time_begin_edit"
+                android:layout_below="@id/content_apply_time_begin_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
+
+            <TextView
+                android:id="@+id/title_apply_time_end_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_apply_time_end_edit"
+                android:layout_below="@id/content_apply_time_begin_edit"
+                android:text="@string/title_business_travel_apply_time_end"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
+
+            <TextView
+                android:id="@+id/next_btn"
+                android:layout_width="@dimen/custom_apply_next_btn_width"
+                android:layout_height="@dimen/custom_apply_next_btn_height"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/content_apply_time_end_edit"
+                android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
+                android:background="@drawable/bg_next_btn"
+                android:gravity="center"
+                android:text="@string/btn_next"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/custom_apply_next_btn_text_size"
+                android:textStyle="bold" />
 
 
-    </RelativeLayout>
+        </RelativeLayout>
+    </LinearLayout>
 
 </layout>
