--- a/app/src/main/res/layout/activity_business_travel_reimb_fee_item.xml
+++ b/app/src/main/res/layout/activity_business_travel_reimb_fee_item.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-    <!--车船费	人数，天数-->
-    <!--住宿费	天数，单价，金额-->
-    <!--伙食补助	人数，天数，金额-->
-    <!--室内交通补助	人数，天数，金额-->
-    <!--其他费用	名称，金额-->
     <data>
 
     </data>
@@ -15,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/custom_activity_padding">
+        >
+        <include layout="@layout/title_bar_layout"/>
 
         <TextView
             android:id="@+id/tip_serial_number_info_txt"
@@ -23,13 +18,18 @@
             android:layout_height="wrap_content"
             android:text="@string/serial_number_txt"
             android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_reimb_serial_number_tip_text_size" />
+            android:textSize="@dimen/custom_reimb_serial_number_tip_text_size"
+            android:layout_marginLeft="@dimen/custom_activity_padding"
+            android:layout_marginTop="@dimen/custom_activity_padding"
+            />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/title_tip_txt_padding_vertical"
             android:paddingTop="@dimen/title_tip_txt_padding_vertical"
+            android:paddingRight="@dimen/custom_activity_padding"
+            android:paddingLeft="@dimen/custom_activity_padding"
             android:visibility="gone"
             >
 
@@ -109,6 +109,8 @@
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/title_tip_txt_padding_vertical"
             android:paddingTop="@dimen/title_tip_txt_padding_vertical"
+            android:paddingRight="@dimen/custom_activity_padding"
+            android:paddingLeft="@dimen/custom_activity_padding"
             android:visibility="gone"
             >
 
@@ -188,6 +190,8 @@
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/title_tip_txt_padding_vertical"
             android:paddingTop="@dimen/title_tip_txt_padding_vertical"
+            android:paddingRight="@dimen/custom_activity_padding"
+            android:paddingLeft="@dimen/custom_activity_padding"
             android:visibility="gone"
             >
 
@@ -266,6 +270,8 @@
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/title_tip_txt_padding_vertical"
             android:paddingTop="@dimen/title_tip_txt_padding_vertical"
+            android:paddingRight="@dimen/custom_activity_padding"
+            android:paddingLeft="@dimen/custom_activity_padding"
             android:visibility="gone"
             >
 
@@ -343,6 +349,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/title_tip_txt_padding_vertical"
+            android:paddingRight="@dimen/custom_activity_padding"
+            android:paddingLeft="@dimen/custom_activity_padding"
             android:paddingTop="@dimen/title_tip_txt_padding_vertical"
             >
 
@@ -409,6 +417,7 @@
             android:gravity="center"
             android:text="@string/btn_confirm"
             android:textSize="@dimen/custom_apply_next_btn_text_size"
+            android:layout_marginRight="@dimen/custom_activity_padding"
             android:textStyle="bold" />
 
     </LinearLayout>
