--- a/app/src/main/res/layout/activity_business_travel_reimb_info.xml
+++ b/app/src/main/res/layout/activity_business_travel_reimb_info.xml
@@ -5,6 +5,13 @@
 
     </data>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+        <include layout="@layout/title_bar_layout"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -156,6 +163,7 @@
             android:textSize="@dimen/custom_apply_next_btn_text_size"
             android:textStyle="bold" />
     </RelativeLayout>
+    </LinearLayout>
 
 
 </layout>
