--- a/app/src/main/res/layout/activity_business_travel_reimb_type_fee.xml
+++ b/app/src/main/res/layout/activity_business_travel_reimb_type_fee.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
+        <include layout="@layout/title_bar_layout"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
