--- a/app/src/main/res/layout/activity_public_service_apply_fee.xml
+++ b/app/src/main/res/layout/activity_public_service_apply_fee.xml
@@ -5,165 +5,170 @@
 
     </data>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/custom_activity_padding"
-        >
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/title_public_service_apply_guest_count_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_apply_guest_count_edit"
-            android:text="@string/title_public_service_apply_guest_count"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+        <include layout="@layout/title_bar_layout" />
 
-        <EditText
-            android:id="@+id/content_public_service_apply_guest_count_edit"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/apply_title_content_margin"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:layout_toRightOf="@id/title_public_service_apply_guest_count_txt"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            android:layout_height="match_parent"
+            android:padding="@dimen/custom_activity_padding">
 
-        <EditText
-            android:id="@+id/content_public_service_apply_accompany_count_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_apply_guest_count_edit"
-            android:layout_below="@id/content_public_service_apply_guest_count_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <TextView
+                android:id="@+id/title_public_service_apply_guest_count_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_apply_guest_count_edit"
+                android:text="@string/title_public_service_apply_guest_count"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_apply_accompany_count_edit"
-            android:layout_below="@id/content_public_service_apply_guest_count_edit"
-            android:text="@string/title_public_service_apply_accompany_count"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <EditText
+                android:id="@+id/content_public_service_apply_guest_count_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/apply_title_content_margin"
+                android:layout_toRightOf="@id/title_public_service_apply_guest_count_txt"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <EditText
-            android:id="@+id/content_public_service_apply_eating_count_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_apply_accompany_count_edit"
-            android:layout_below="@id/content_public_service_apply_accompany_count_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_public_service_apply_accompany_count_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_apply_guest_count_edit"
+                android:layout_below="@id/content_public_service_apply_guest_count_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_apply_eating_count_edit"
-            android:layout_below="@id/content_public_service_apply_accompany_count_edit"
-            android:text="@string/title_public_service_apply_eating_count"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_apply_accompany_count_edit"
+                android:layout_below="@id/content_public_service_apply_guest_count_edit"
+                android:text="@string/title_public_service_apply_accompany_count"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <EditText
-            android:id="@+id/content_public_service_apply_dining_standards_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_apply_eating_count_edit"
-            android:layout_below="@id/content_public_service_apply_eating_count_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_public_service_apply_eating_count_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_apply_accompany_count_edit"
+                android:layout_below="@id/content_public_service_apply_accompany_count_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_apply_dining_standards_edit"
-            android:layout_below="@id/content_public_service_apply_eating_count_edit"
-            android:text="@string/title_public_service_apply_dining_standards"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_apply_eating_count_edit"
+                android:layout_below="@id/content_public_service_apply_accompany_count_edit"
+                android:text="@string/title_public_service_apply_eating_count"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <EditText
-            android:id="@+id/content_public_service_apply_stay_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_apply_dining_standards_edit"
-            android:layout_below="@id/content_public_service_apply_dining_standards_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_public_service_apply_dining_standards_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_apply_eating_count_edit"
+                android:layout_below="@id/content_public_service_apply_eating_count_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_apply_stay_edit"
-            android:layout_below="@id/content_public_service_apply_dining_standards_edit"
-            android:text="@string/title_public_service_apply_stay_fee"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_apply_dining_standards_edit"
+                android:layout_below="@id/content_public_service_apply_eating_count_edit"
+                android:text="@string/title_public_service_apply_dining_standards"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <EditText
-            android:id="@+id/content_public_service_apply_other_fee_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_apply_stay_edit"
-            android:layout_below="@id/content_public_service_apply_stay_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_public_service_apply_stay_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_apply_dining_standards_edit"
+                android:layout_below="@id/content_public_service_apply_dining_standards_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_apply_other_fee_edit"
-            android:layout_below="@id/content_public_service_apply_stay_edit"
-            android:text="@string/title_public_service_apply_other_fee"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_apply_stay_edit"
+                android:layout_below="@id/content_public_service_apply_dining_standards_edit"
+                android:text="@string/title_public_service_apply_stay_fee"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/custom_apply_item_margin"
-            android:layout_below="@id/content_public_service_apply_other_fee_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:background="@android:color/white" />
+            <EditText
+                android:id="@+id/content_public_service_apply_other_fee_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_apply_stay_edit"
+                android:layout_below="@id/content_public_service_apply_stay_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:id="@+id/title_public_service_apply_over_standards_fee_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/divider"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:text="@string/title_public_service_apply_over_standards_fee"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_apply_other_fee_edit"
+                android:layout_below="@id/content_public_service_apply_stay_edit"
+                android:text="@string/title_public_service_apply_other_fee"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <Switch
-            android:id="@+id/switch_over_standards"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/title_public_service_apply_over_standards_fee_txt"
-            android:layout_alignParentRight="true" />
+            <View
+                android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/custom_apply_item_margin"
+                android:layout_below="@id/content_public_service_apply_other_fee_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:background="@android:color/white" />
 
-        <TextView
-            android:layout_width="@dimen/custom_apply_next_btn_width"
-            android:layout_height="@dimen/custom_apply_next_btn_height"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/switch_over_standards"
-            android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
-            android:background="@drawable/bg_next_btn"
-            android:gravity="center"
-            android:text="@string/btn_next"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/custom_apply_next_btn_text_size"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/title_public_service_apply_over_standards_fee_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/divider"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:text="@string/title_public_service_apply_over_standards_fee"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-    </RelativeLayout>
+            <Switch
+                android:id="@+id/switch_over_standards"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/title_public_service_apply_over_standards_fee_txt"
+                android:layout_alignParentRight="true" />
 
+            <TextView
+                android:layout_width="@dimen/custom_apply_next_btn_width"
+                android:layout_height="@dimen/custom_apply_next_btn_height"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/switch_over_standards"
+                android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
+                android:background="@drawable/bg_next_btn"
+                android:gravity="center"
+                android:text="@string/btn_next"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/custom_apply_next_btn_text_size"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+    </LinearLayout>
 
 </layout>
