--- a/app/src/main/res/layout/activity_public_service_reimb_fee_info.xml
+++ b/app/src/main/res/layout/activity_public_service_reimb_fee_info.xml
@@ -5,174 +5,181 @@
 
     </data>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/custom_activity_padding"
-        >
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tip_serial_number_info_txt"
-            android:textSize="@dimen/custom_reimb_serial_number_tip_text_size"
-            android:textColor="@color/color_black_content"
-            android:text="@string/serial_number_txt"
-            />
+        <include layout="@layout/title_bar_layout" />
 
-        <TextView
-            android:id="@+id/title_public_service_reimb_dining_standards_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_reimb_dining_standards_edit"
-            android:text="@string/title_public_service_apply_dining_standards"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
-
-        <EditText
-            android:id="@+id/content_public_service_reimb_dining_standards_edit"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tip_serial_number_info_txt"
-            android:layout_marginLeft="@dimen/apply_title_content_margin"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:layout_toRightOf="@id/title_public_service_reimb_dining_standards_txt"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            android:layout_height="match_parent"
+            android:padding="@dimen/custom_activity_padding">
+
+            <TextView
+                android:id="@+id/tip_serial_number_info_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/serial_number_txt"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_reimb_serial_number_tip_text_size" />
+
+            <TextView
+                android:id="@+id/title_public_service_reimb_dining_standards_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_reimb_dining_standards_edit"
+                android:text="@string/title_public_service_apply_dining_standards"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
+
+            <EditText
+                android:id="@+id/content_public_service_reimb_dining_standards_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tip_serial_number_info_txt"
+                android:layout_marginLeft="@dimen/apply_title_content_margin"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:layout_toRightOf="@id/title_public_service_reimb_dining_standards_txt"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
 
-        <EditText
-            android:id="@+id/content_public_service_reimb_stay_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_reimb_dining_standards_edit"
-            android:layout_below="@id/content_public_service_reimb_dining_standards_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_public_service_reimb_stay_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_reimb_dining_standards_edit"
+                android:layout_below="@id/content_public_service_reimb_dining_standards_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_reimb_stay_edit"
-            android:layout_below="@id/content_public_service_reimb_dining_standards_edit"
-            android:text="@string/title_public_service_apply_stay_fee"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_reimb_stay_edit"
+                android:layout_below="@id/content_public_service_reimb_dining_standards_edit"
+                android:text="@string/title_public_service_apply_stay_fee"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <EditText
-            android:id="@+id/content_public_service_reimb_other_fee_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_reimb_stay_edit"
-            android:layout_below="@id/content_public_service_reimb_stay_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_public_service_reimb_other_fee_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_reimb_stay_edit"
+                android:layout_below="@id/content_public_service_reimb_stay_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_reimb_other_fee_edit"
-            android:layout_below="@id/content_public_service_reimb_stay_edit"
-            android:text="@string/title_public_service_apply_other_fee"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_reimb_other_fee_edit"
+                android:layout_below="@id/content_public_service_reimb_stay_edit"
+                android:text="@string/title_public_service_apply_other_fee"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <EditText
-            android:id="@+id/content_public_service_reimb_cash_pay_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_reimb_other_fee_edit"
-            android:layout_below="@id/content_public_service_reimb_other_fee_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_public_service_reimb_cash_pay_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_reimb_other_fee_edit"
+                android:layout_below="@id/content_public_service_reimb_other_fee_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_reimb_cash_pay_edit"
-            android:layout_below="@id/content_public_service_reimb_other_fee_edit"
-            android:text="@string/title_business_travel_reimb_cash_pay"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_reimb_cash_pay_edit"
+                android:layout_below="@id/content_public_service_reimb_other_fee_edit"
+                android:text="@string/title_business_travel_reimb_cash_pay"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <EditText
-            android:id="@+id/content_public_service_reimb_transfer_pay_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_reimb_cash_pay_edit"
-            android:layout_below="@id/content_public_service_reimb_cash_pay_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_public_service_reimb_transfer_pay_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_reimb_cash_pay_edit"
+                android:layout_below="@id/content_public_service_reimb_cash_pay_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_reimb_transfer_pay_edit"
-            android:layout_below="@id/content_public_service_reimb_cash_pay_edit"
-            android:text="@string/title_business_travel_reimb_transfer_account"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_reimb_transfer_pay_edit"
+                android:layout_below="@id/content_public_service_reimb_cash_pay_edit"
+                android:text="@string/title_business_travel_reimb_transfer_account"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <EditText
-            android:id="@+id/content_public_service_reimb_card_pay_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_reimb_transfer_pay_edit"
-            android:layout_below="@id/content_public_service_reimb_transfer_pay_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <EditText
+                android:id="@+id/content_public_service_reimb_card_pay_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_reimb_transfer_pay_edit"
+                android:layout_below="@id/content_public_service_reimb_transfer_pay_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_reimb_card_pay_edit"
-            android:layout_below="@id/content_public_service_reimb_transfer_pay_edit"
-            android:text="@string/title_business_travel_reimb_card_pay"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_reimb_card_pay_edit"
+                android:layout_below="@id/content_public_service_reimb_transfer_pay_edit"
+                android:text="@string/title_business_travel_reimb_card_pay"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <TextView
-            android:id="@+id/content_sum_account_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_reimb_card_pay_edit"
-            android:layout_below="@id/content_public_service_reimb_card_pay_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:text="￥2345"
-            android:textColor="@color/colorAccent"
-            android:textSize="@dimen/custom_reimb_amount_text_size"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/content_sum_account_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_reimb_card_pay_edit"
+                android:layout_below="@id/content_public_service_reimb_card_pay_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:text="￥2345"
+                android:textColor="@color/colorAccent"
+                android:textSize="@dimen/custom_reimb_amount_text_size"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/title_sum_account_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_sum_account_txt"
-            android:layout_below="@id/content_reimb_net_edit"
-            android:text="@string/title_business_travel_reimb_sum_account"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:id="@+id/title_sum_account_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_sum_account_txt"
+                android:layout_below="@id/content_reimb_net_edit"
+                android:text="@string/title_business_travel_reimb_sum_account"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-        <TextView
-            android:id="@+id/next_btn"
-            android:layout_width="@dimen/custom_apply_next_btn_width"
-            android:layout_height="@dimen/custom_apply_next_btn_height"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/content_sum_account_txt"
-            android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
-            android:background="@drawable/bg_next_btn"
-            android:gravity="center"
-            android:text="@string/btn_next"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/custom_apply_next_btn_text_size"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/next_btn"
+                android:layout_width="@dimen/custom_apply_next_btn_width"
+                android:layout_height="@dimen/custom_apply_next_btn_height"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/content_sum_account_txt"
+                android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
+                android:background="@drawable/bg_next_btn"
+                android:gravity="center"
+                android:text="@string/btn_next"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/custom_apply_next_btn_text_size"
+                android:textStyle="bold" />
 
-    </RelativeLayout>
+        </RelativeLayout>
+
+    </LinearLayout>
 
 
 </layout>
