--- a/app/src/main/res/layout/activity_public_service_reimb_person_fee.xml
+++ b/app/src/main/res/layout/activity_public_service_reimb_person_fee.xml
@@ -5,143 +5,149 @@
 
     </data>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/custom_activity_padding"
-        >
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tip_serial_number_info_txt"
-            android:textSize="@dimen/custom_reimb_serial_number_tip_text_size"
-            android:textColor="@color/color_black_content"
-            android:text="@string/serial_number_txt"
-            />
+        <include layout="@layout/title_bar_layout" />
 
-        <TextView
-            android:id="@+id/title_public_service_reimb_guest_person_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_reimb_guest_person_edit"
-            android:text="@string/title_public_service_apply_guest_person"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
-
-        <EditText
-            android:id="@+id/content_public_service_reimb_guest_person_edit"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tip_serial_number_info_txt"
-            android:layout_marginLeft="@dimen/apply_title_content_margin"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:layout_toRightOf="@id/title_public_service_reimb_guest_person_txt"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size"
+            android:layout_height="match_parent"
+            android:padding="@dimen/custom_activity_padding">
 
-            />
+            <TextView
+                android:id="@+id/tip_serial_number_info_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/serial_number_txt"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_reimb_serial_number_tip_text_size" />
 
-        <EditText
-            android:id="@+id/content_public_service_reimb_guest_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_reimb_guest_person_edit"
-            android:layout_below="@id/content_public_service_reimb_guest_person_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size"
+            <TextView
+                android:id="@+id/title_public_service_reimb_guest_person_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_reimb_guest_person_edit"
+                android:text="@string/title_public_service_apply_guest_person"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
-            />
+            <EditText
+                android:id="@+id/content_public_service_reimb_guest_person_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tip_serial_number_info_txt"
+                android:layout_marginLeft="@dimen/apply_title_content_margin"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:layout_toRightOf="@id/title_public_service_reimb_guest_person_txt"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size"
 
-        <TextView
-            android:id="@+id/title_public_service_reimb_guest_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_reimb_guest_edit"
-            android:layout_below="@id/content_public_service_reimb_guest_edit"
-            android:text="@string/title_public_service_apply_guest_count"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+                />
 
+            <EditText
+                android:id="@+id/content_public_service_reimb_guest_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_reimb_guest_person_edit"
+                android:layout_below="@id/content_public_service_reimb_guest_person_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size"
 
-        <EditText
-            android:id="@+id/content_public_service_reimb_accompany_person_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_reimb_guest_edit"
-            android:layout_below="@id/content_public_service_reimb_guest_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+                />
 
-        <EditText
-            android:id="@+id/content_public_service_reimb_accompany_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_reimb_accompany_person_edit"
-            android:layout_below="@id/content_public_service_reimb_accompany_person_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_reimb_accompany_edit"
-            android:layout_below="@id/content_public_service_reimb_guest_edit"
-            android:text="@string/title_public_service_apply_accompany_count"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <TextView
+                android:id="@+id/title_public_service_reimb_guest_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_reimb_guest_edit"
+                android:layout_below="@id/content_public_service_reimb_guest_edit"
+                android:text="@string/title_public_service_apply_guest_count"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_reimb_accompany_person_edit"
-            android:layout_below="@id/content_public_service_reimb_accompany_edit"
-            android:text="@string/title_public_service_apply_accompany_person"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <EditText
+                android:id="@+id/content_public_service_reimb_accompany_person_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_reimb_guest_edit"
+                android:layout_below="@id/content_public_service_reimb_guest_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
+
+            <EditText
+                android:id="@+id/content_public_service_reimb_accompany_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_reimb_accompany_person_edit"
+                android:layout_below="@id/content_public_service_reimb_accompany_person_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_reimb_accompany_edit"
+                android:layout_below="@id/content_public_service_reimb_guest_edit"
+                android:text="@string/title_public_service_apply_accompany_count"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
 
-        <EditText
-            android:id="@+id/content_public_service_reimb_eating_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/content_public_service_reimb_accompany_edit"
-            android:layout_below="@id/content_public_service_reimb_accompany_edit"
-            android:layout_marginTop="@dimen/custom_apply_item_margin"
-            android:textColor="@color/color_black_content"
-            android:textSize="@dimen/custom_apply_content_text_size" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_reimb_accompany_person_edit"
+                android:layout_below="@id/content_public_service_reimb_accompany_edit"
+                android:text="@string/title_public_service_apply_accompany_person"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
 
-        <TextView
-            android:id="@+id/title_public_service_reimb_eating_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/content_public_service_reimb_eating_edit"
-            android:layout_below="@id/content_public_service_reimb_accompany_edit"
-            android:text="@string/title_public_service_apply_eating_count"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/custom_apply_title_text_size" />
+            <EditText
+                android:id="@+id/content_public_service_reimb_eating_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/content_public_service_reimb_accompany_edit"
+                android:layout_below="@id/content_public_service_reimb_accompany_edit"
+                android:layout_marginTop="@dimen/custom_apply_item_margin"
+                android:textColor="@color/color_black_content"
+                android:textSize="@dimen/custom_apply_content_text_size" />
 
 
-        <TextView
-            android:id="@+id/next_btn"
-            android:layout_width="@dimen/custom_apply_next_btn_width"
-            android:layout_height="@dimen/custom_apply_next_btn_height"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/content_public_service_reimb_eating_edit"
-            android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
-            android:background="@drawable/bg_next_btn"
-            android:gravity="center"
-            android:text="@string/btn_next"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/custom_apply_next_btn_text_size"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/title_public_service_reimb_eating_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/content_public_service_reimb_eating_edit"
+                android:layout_below="@id/content_public_service_reimb_accompany_edit"
+                android:text="@string/title_public_service_apply_eating_count"
+                android:textColor="@color/color_black_title"
+                android:textSize="@dimen/custom_apply_title_text_size" />
 
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/next_btn"
+                android:layout_width="@dimen/custom_apply_next_btn_width"
+                android:layout_height="@dimen/custom_apply_next_btn_height"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/content_public_service_reimb_eating_edit"
+                android:layout_marginTop="@dimen/custom_apply_btn_item_margin"
+                android:background="@drawable/bg_next_btn"
+                android:gravity="center"
+                android:text="@string/btn_next"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/custom_apply_next_btn_text_size"
+                android:textStyle="bold" />
+
+
+        </RelativeLayout>
+    </LinearLayout>
 
 </layout>
