--- a/app/src/main/res/layout/fragment_apply_list.xml
+++ b/app/src/main/res/layout/fragment_apply_list.xml
@@ -11,6 +11,8 @@
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <include layout="@layout/title_bar_layout"/>
+
         <android.support.design.widget.TabLayout
             android:id="@+id/content_tab"
             android:layout_width="match_parent"
