--- a/app/src/main/res/layout/title_bar_layout.xml
+++ b/app/src/main/res/layout/title_bar_layout.xml
@@ -14,7 +14,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:background="@color/color_white"
         >
 
         <ImageView
