--- a/app/src/main/res/layout/activity_business_travel_reimb_info.xml
+++ b/app/src/main/res/layout/activity_business_travel_reimb_info.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:bind="http://schemas.android.com/apk/res-auto"
+    >
 
     <data>
-
+        <variable
+            name="baseInfoViewModel"
+            type="cn.jsjst.reimbursement.component.rebim.BTReimbBaseInfoViewModel"/>
     </data>
 
     <LinearLayout
@@ -11,12 +15,16 @@
         android:orientation="vertical"
         >
 
-        <include layout="@layout/title_bar_layout"/>
+        <include layout="@layout/title_bar_layout"
+            bind:toolbarModel="@{baseInfoViewModel.mToolbarViewModel}"
+            />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/custom_activity_padding"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         >
 
         <TextView
@@ -161,6 +169,7 @@
             android:gravity="center"
             android:text="@string/btn_next"
             android:textSize="@dimen/custom_apply_next_btn_text_size"
+            android:textColor="@color/color_white"
             android:textStyle="bold" />
     </RelativeLayout>
     </LinearLayout>
