--- a/app/src/main/res/layout/activity_business_travel_apply_type_fee.xml
+++ b/app/src/main/res/layout/activity_business_travel_apply_type_fee.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    >
 
     <data>
-
+        <variable
+            name="viewModel"
+            type="cn.jsjst.reimbursement.component.apply.BTApplyTypeFeeViewModel"/>
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         >
-        <include layout="@layout/title_bar_layout"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tip_serial_number_info_txt"
-            android:textSize="@dimen/custom_reimb_serial_number_tip_text_size"
-            android:textColor="@color/color_black_content"
-            android:text="@string/serial_number_txt"
-            android:layout_marginTop="@dimen/custom_activity_padding"
-            android:layout_marginLeft="@dimen/custom_activity_padding"
+        <include layout="@layout/title_bar_layout"
+            bind:toolbarModel="@{viewModel.mToolbarViewModel}"
             />
 
         <ScrollView
@@ -345,6 +343,7 @@
                     android:layout_gravity="right"
                     android:text="@string/btn_next"
                     android:textSize="@dimen/custom_apply_next_btn_text_size"
+                    android:textColor="@color/color_white"
                     android:textStyle="bold" />
 
             </LinearLayout>
