--- a/app/src/main/res/layout/activity_business_travel_reimb_address_time.xml
+++ b/app/src/main/res/layout/activity_business_travel_reimb_address_time.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    >
     <data>
-
+        <variable
+            name="timeAddrViewModel"
+            type="cn.jsjst.reimbursement.component.rebim.BTReimbTimeAddrViewModel"/>
     </data>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
-        <include layout="@layout/title_bar_layout"/>
+        <include layout="@layout/title_bar_layout"
+            bind:toolbarModel="@{timeAddrViewModel.mToolbarViewModel}"
+            />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="@dimen/custom_activity_padding"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             >
             <TextView
                 android:layout_width="wrap_content"
