--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     >
 
     <data>
-
+        <variable
+            name="chartViewModel"
+            type="cn.jsjst.reimbursement.component.chart.ChartViewModel"/>
     </data>
 
     <LinearLayout
@@ -13,7 +15,9 @@
         android:orientation="vertical"
         >
 
-        <include layout="@layout/title_bar_layout"/>
+        <include layout="@layout/title_bar_layout"
+            bind:toolbarModel="@{chartViewModel.mToolbarViewModel}"
+            />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/chart_list"
