--- a/app/src/main/res/layout/title_bar_layout.xml
+++ b/app/src/main/res/layout/title_bar_layout.xml
@@ -1,69 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:img="http://schemas.android.com/apk/res-auto"
-    xmlns:tool="http://schemas.android.com/tools"
-    >
-
-    <data>
-        <!--<import type="android.view.View"/>-->
-        <!--<variable-->
-            <!--name="toolbarModel"-->
-            <!--type="cn.jsjst.reimbursement.component.base.ToolbarViewModel"/>-->
-    </data>
+    xmlns:tool="http://schemas.android.com/tools">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_white"
-        >
+        android:background="@color/color_white">
 
         <ImageView
             android:id="@+id/toolbar_back_imgbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:onClick="@{toolbarModel::onBackEvent}"
+            android:paddingBottom="@dimen/toolbar_img_padding_vertical"
             android:paddingLeft="@dimen/toolbar_img_padding_left"
             android:paddingRight="@dimen/toolbar_img_padding_right"
             android:paddingTop="@dimen/toolbar_img_padding_vertical"
-            android:paddingBottom="@dimen/toolbar_img_padding_vertical"
             android:src="@drawable/back_arrow_black"
-            />
-        <!--android:onClick="@{toolbarModel::onBackEvent}"-->
-        <!--android:visibility="@{toolbarModel.showBackIcon?View.VISIBLE:View.GONE}"-->
+            android:visibility="@{toolbarModel.showBackIcon?View.VISIBLE:View.GONE}" />
+
 
         <TextView
             android:id="@+id/title_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:gravity="center"
             android:ellipsize="end"
-            android:textColor="@color/color_black_title"
-            android:textSize="@dimen/toolbar_title_text_size"
+            android:gravity="center"
             android:maxEms="10"
             android:minHeight="@dimen/toolbar_title_text_min_height"
             android:paddingLeft="@dimen/toolbar_title_padding_horizontal"
             android:paddingRight="@dimen/toolbar_title_padding_horizontal"
-            tool:text="this is title"
-        />
-        <!--android:text="@{toolbarModel.title}"-->
+            android:text="@{toolbarModel.title}"
+            android:textColor="@color/color_black_title"
+            android:textSize="@dimen/toolbar_title_text_size"
+            tool:text="this is title" />
+
 
         <ImageView
             android:id="@+id/operate_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/toolbar_right_img_margin"
-            android:paddingTop="@dimen/toolbar_img_padding_vertical"
             android:paddingBottom="@dimen/toolbar_img_padding_vertical"
             android:paddingLeft="@dimen/toolbar_img_padding_right"
             android:paddingRight="@dimen/toolbar_img_padding_left"
-            android:layout_alignParentRight="true"
+            android:paddingTop="@dimen/toolbar_img_padding_vertical"
             tool:src="@drawable/menu_qr_code"
-            />
-        <!--img:src="@{toolbarModel.menuIconId}"-->
-        <!--android:onClick="@{toolbarModel::onRightMenuEvent}"-->
-        <!--android:visibility="@{toolbarModel.showRightMenuIcon?View.VISIBLE:View.GONE}"-->
+            android:onClick="@{toolbarModel::onRightMenuEvent}"
+            android:visibility="@{toolbarModel.showRightMenuIcon?View.VISIBLE:View.GONE}"
+            img:src="@{toolbarModel.menuIconId}"
+        />
+
     </RelativeLayout>
+
+    <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="toolbarModel"
+            type="cn.jsjst.reimbursement.component.base.ToolbarViewModel" />
+    </data>
 
 </layout>
